fix: alignment of attribution link on mobile and add working live link in readme file

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,4 @@
     color: white;
   }
 
-  .attribution-link {
-    font-size: 0.4rem;
-  }
 }
